Add the first event!

--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
 
     <div class="container">
 
+    <div class="panel panel-default event">
+    <div class="panel-heading">First Event</div>
+    <div class="panel-body">
+    <p><a href="https://goo.gl/maps/EVCwAyGe1hz">Delaville Café</a>, 75010 Paris</p>
+    <p>4 July 2017, 19h00–until</p>
+    </div>
+    </div>
+
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>❧ A Call to Action ❧</h1>
@@ -88,7 +96,6 @@
 		<p>There might be a topic of the month. There will be places to sit in quiet conversation with your peers, and meet new people. There will absolutely be a chance for you to be heard, and for you to learn from others, regardless of your ability or desires to get up in front of a room and speak.</p>
 
 		<p>What do you think? Will you come join us?</p>
-
       </div>
 
     </div> <!-- /container -->
