--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!-- Twitter cards -->
+    <meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@DevRelSalon">
+	<meta name="twitter:creator" content="@DEGoodmanWilson">
+	<meta name="twitter:title" content="The Paris DevRel Salon: A Call to Action">
+	<meta name="twitter:description" content="You practice developer relations or developer marketing. Let's gather and learn from and support each other.">
+	<meta name="twitter:image" content="https://devrel.salon/images/paris1643twitter.jpg">
+
     <script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
