Add RSVP information.

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <div class="panel-body">
     <p><a href="https://goo.gl/maps/EVCwAyGe1hz">Delaville Café</a>, 75010 Paris</p>
     <p>4 July 2017, 19h00–until</p>
+    <p>No RSVP necessary, just show up. We'll be there waiting for you.</p>
     </div>
     </div>
 
