--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <li class="active"><a href="/">Home</a></li>
             <!-- <li><a href="/about.html">About</a></li> -->
             <li><a href="mailto:howdy@devrel.salon">Contact</a></li>
-            <li><a href="https://twitter.com/DevRelSalon"><i class="fa fa-twitter" aria-hidden="true"></i> @DevRelSalson</a></li>
+            <li><a href="https://twitter.com/DevRelSalon"><i class="fa fa-twitter" aria-hidden="true"></i> @DevRelSalon</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
