Add notice for next event

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
 <div class="container">
 
     <div class="panel panel-default event">
-        <div class="panel-heading">First Event</div>
+        <div class="panel-heading">Second Event</div>
         <div class="panel-body">
-            <p><a href="https://goo.gl/maps/EVCwAyGe1hz">Delaville Café</a>, 75010 Paris</p>
-            <p>4 July 2017, 19h00–until</p>
+            <p>Date and Location: TBA</p>
+            <p>Proposed Topic: What even <em>is</em> DevRel?</p>
             <p>No RSVP necessary, just show up. We'll be there waiting for you.</p>
         </div>
     </div>
