Added last set of notes.

--- a/meetings/20170704.html
+++ b/meetings/20170704.html
@@ -105,7 +105,46 @@
             </ul>
             </p>
             <h2>Marketing developer tools, and the channels to use</h2>
-            <p></p>
+            <p>
+            <ul>
+                <li><b>Identify the customer pain.</b> The best marketing efforts know where the customer's pain is, and
+                    effectively demonstrates that this pain can be solved.
+                </li>
+                <li><b>Find potential customers suffering from this pain</b>, and have a conversation with them.</li>
+                <li><b>Emphasize that this tool represents the <em>right way</em> to get things done.</b> Developers
+                    take pride in crafstmanship, and like the feeling of knowing they are doing things the right way.
+                </li>
+                <li><b>Open Source makes a great gateway</b>, whether its related to your product (like PM2 to
+                    Keymetrics) or not (like web application boilerplate). Great OSS is a way to demonstrate to
+                    developers that you can provide real value.
+                </li>
+                <li><b>Influencer marketing</b> is another avenue to pursue: Find individuals who understand the value
+                    of the tool, and who are willing to share their usage of the tool. Make the people you reach out to
+                    feel special and cool.
+                </li>
+                <li><b>Offer something new to learn.</b> Developers are more likely to examine your content if you are
+                    genuinely helping them to expand their skillsets and expertise.
+                </li>
+                <li><b>Obviously branded content is bad.</b> This is the converse of the last point. If your primary
+                    goal in content marketing is to sell, you will fail. Developers require real value to build goodwill
+                    with them. Selling and branding destroy goodwill.
+                </li>
+                <li><b>Facebook Groups</b> are a surprisingly good channel for finding developer communities to have a
+                    conversation with. Also, you don't have to have a developed network to take advantage of Facebook,
+                    unlike Twitter.
+                </li>
+                <li><b>Always be demoing.</b> This is a great way to get feedback, and to identify potential
+                    influencers.
+                </li>
+                <li><b>Connect your customers to each other.</b> Pair up experienced customers with new or potential
+                    customers, so the one can help the other. This increases the feeling of empowerment, and makes the
+                    newer customer feel welcomed into a community.
+                </li>
+                <li><b>Integrate community support/forums directly into the tool.</b> Let customers find each other.
+                    This provides a sense of community, and social proof that the tool is valuable.
+                </li>
+            </ul>
+            </p>
             <h2>Collecting survey data from developers</h2>
             <p>
             <ul>
