--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@DevRelSalon">
     <meta name="twitter:creator" content="@DEGoodmanWilson">
-    <meta name="twitter:title" content="The Paris DevRel Salon: A Call to Action">
+    <meta name="twitter:title" content="The Paris DevRel Salon: Summer on the Seine">
     <meta name="twitter:description"
-          content="You practice developer relations or developer marketing. Let's gather and learn from and support each other.">
-    <meta name="twitter:image" content="https://devrel.salon/images/paris1643twitter.jpg">
+          content="17 Aug: You practice developer relations or developer marketing. Let's gather and learn from and support each other.">
+    <meta name="twitter:image" content="https://devrel.salon/images/SummerOnTheSeineTwitter.png">
 
     <script>
         (function (i, s, o, g, r, a, m) {
@@ -93,9 +93,12 @@
     <div class="panel panel-default event">
         <div class="panel-heading">Second Event</div>
         <div class="panel-body">
-            <p>Date and Location: TBA</p>
+            <p>Date: Thursday, 17 August</p>
+            <p>Location: </p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d656.2396718972676!2d2.3382589881605713!3d48.85899669869912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDjCsDUxJzMyLjQiTiAywrAyMCcxOS43IkU!5e0!3m2!1sen!2sfr!4v1499961373615" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             <p>Proposed Topic: What even <em>is</em> DevRel?</p>
             <p>No RSVP necessary, just show up. We'll be there waiting for you.</p>
+            <p>Also: Bring some apero goodies to share.</p>
         </div>
     </div>
 
