Posting of second meeting notes, and announcement of third meeting

--- a/meetings/20170704.html
+++ b/meetings/20170704.html
@@ -80,6 +80,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="/meetings/20170704.html">4 July 2017</a></li>
+                        <li><a href="/meetings/20170817.html">17 August 2017</a></li>
                     </ul>
                 </li>
                 <li><a href="mailto:howdy@devrel.salon">Contact</a></li>
@@ -182,6 +183,7 @@
                     should do this or that. Putting the effort in context, reminding them of the value of responding, is
                     helpful.
                 </li>
+            </ul></p>
         </div>
     </div>
 
