Update for 4th meeting and 5th meeting announcement.

--- a/meetings/20170921.html
+++ b/meetings/20170921.html
@@ -79,6 +79,7 @@
                         Past Meetings <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
+                        <li><a href="/meetings/20171026.html">26 October 2017</a></li>
                         <li><a href="/meetings/20170921.html">21 September 2017</a></li>
                         <li><a href="/meetings/20170817.html">17 August 2017</a></li>
                         <li><a href="/meetings/20170704.html">4 July 2017</a></li>
@@ -95,7 +96,7 @@
 <div class="container">
 
     <div class="col-md-8 col-md-offset-2 panel panel-default event-listing">
-        <div class="panel-heading">Second Event: 17 August 2017</div>
+        <div class="panel-heading">Third Event: 21 September 2017</div>
         <div class="panel-body">
             <p>For the final summer evening in Paris, four devrellers gathered once more on the banks of the Seine for our third event. The small size, and the fair weather meant that conversation was far less structured, but talk centered around <a href="https://www.givebriq.com">Briq</a>, and how to convince developers to invest in a new platform.</p>
         </div>
