--- a/meetings/20170817.html
+++ b/meetings/20170817.html
@@ -79,6 +79,7 @@
                         Past Meetings <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
+                        <li><a href="/meetings/20171026.html">26 October 2017</a></li>
                         <li><a href="/meetings/20170921.html">21 September 2017</a></li>
                         <li><a href="/meetings/20170817.html">17 August 2017</a></li>
                         <li><a href="/meetings/20170704.html">4 July 2017</a></li>
