Too late, but the numbering of the events is wrong

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <div class="container">
 
     <div class="panel panel-default event">
-        <div class="panel-heading">Fourth Event</div>
+        <div class="panel-heading">Fifth Event</div>
         <div class="panel-body">
             <p>When: Wednesday, 24 January, 18h30</p>
             <p>Where: Delaville Café</p>
